Minor change on run.sh script.