@@ -1,2 +1,3 @@
 #!/usr/bin/env bash
-lein trampoline with-profile prod run -m uxbox.main
+JVM_OPTS="-Xms4g -Xmx4g -XX:+UseG1GC -XX:+AggressiveOpts -server"
+java $JVM_OPTS -jar target/uxbox-backend-0.1.0-SNAPSHOT-standalone.jar -m uxbox.main
